2010-04-13  Taco Hoekwater  <taco@luatex>

	* am/luafontforge.am: delete three lines.
	* luafontloader/fontforge/Unicode/dump.c: deleted
	* luafontloader/fontforge/Unicode/backtrns.c: deleted
	* luafontloader/fontforge/Unicode/unialt.c: deleted


2010-04-13  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* image/pdftoepdf.cc: Fix building with libpoppler.
	* luatex.c: Fix building for MinGW32.

2010-04-13  Taco Hoekwater  <taco@luatex>

	* new import from luatex repository (HEAD of 0.60.x branch)

2010-04-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/luatex.am: Remove libmplib.a from $($(luatex_OBJECTS)'s
	dependencies ...
	* am/libluatex.am: and add to $(libluatex_a_OBJECTS)'s
	dependencies; otherwise parallel builds may fail.

2010-04-04  Taco Hoekwater  <taco@luatex>

	* import of luatex 0.60.0, with a few local changes:
	* luatex.c (ipcpage): fix fetching of 'name'.
	* dvi/dvigen.w (dvi_end_page): fix IPC flushing.
	* image/pdftoepdf.cc (write_epdf1): comment out use of 
	page->getResourcesNF() and page->getMetadataNF().

2010-03-09  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* luatangle.ch: Use kpse_set_program_name(argv[0], nil) instead
	of kpse_set_progname(argv[0]).

2010-02-15  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/luamisc.am (libluamisc_a_CPPFLAGS): Adapt to zziplib now
	in ../../../libs/zziplib/.

2010-01-31  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Moved zziplib/ to ../../../libs/zziplib.
	* am/luamisc.am (libluamisc_a_DEPENDENCIES): Adapt.
	* am/luatex.am (luatex_ldadd): Adapt.

2010-01-29  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Clarify dependencies between luaTeX libraries:
	* am/libzzip.am: Remove dependency on liblua51.a.
	Remove memdisk.[ch] and mmapped.[ch] from libzzip_a_SOURCES and
	add them to EXTRA_DIST.
	* am/luamisc.am: Add dependency on libzzip.a.
	* am/luasocket.am: Replace dependency on libzzip.a by liblua51.a.

2010-01-27  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* utils/avl.c (avl_copy): Proper handling of const.
